--- a/src/entities/Button/style.module.scss
+++ b/src/entities/Button/style.module.scss
@@ -3,28 +3,31 @@ $button-height: 40px;
 $button-color: #1C1C1CFF;
 $button-color-text: green;
 $bottom-padding: 20px;
+
 .button {
 	position: relative;
-	inset-inline-start: calc(100% - $button-width);
 	inset-block-start: calc($bottom-padding + $button-height * 0.5);
+	inset-inline-start: calc(100% - $button-width);
+	z-index: 1;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	min-width: $button-width;
 	min-height: $button-height;
-	clip-path: polygon(50% 0%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
-	background-color: $button-color;
-	color: $button-color-text;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
 	padding: 0 15px;
-	font-weight: 900;
 	overflow: hidden;
-	cursor: pointer;
+	color: $button-color-text;
+	font-weight: 900;
+	background-color: $button-color;
 	border: none;
-	z-index: 1;
-	&:after {
+	cursor: pointer;
+	clip-path: polygon(50% 0%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
+
+	&::after {
 		content: '⇒';
 	}
-	&:before {
+
+	&::before {
 		content: '';
 		position: absolute;
 		inset: 0;
@@ -32,21 +35,25 @@ $bottom-padding: 20px;
 		translate: 98% 0;
 		transition: translate 0s linear;
 	}
+
 	&:hover, &:active {
-		&:after {
+		&::after {
 			animation: flickering 0.8s infinite;
 		}
 	}
+
 	&:active {
-		&:before {
-			transition: translate 0.8s linear;
+		&::before {
 			mix-blend-mode: soft-light;
+			transition: translate 0.6s linear;
 			translate: 0 0;
 		}
 	}
+
 	&:focus {
 		outline: none;
 	}
+
 	&:focus-visible {
 		outline: 5px solid black;
 	}
