--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -1,4 +1,3 @@
-$accent-color: #b4b4b4;
 $bg-color: #171717;
 
 .main {
@@ -27,6 +26,14 @@ $bg-color: #171717;
 	translate: -50% -50%;
 }
 .content {
+	padding: 2.5% 5%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: repeat(3, 1fr);
+	grid-template-areas:
+			'education additional'
+			'experience about'
+			'skills socials';
 	height: 100%;
 	width: 100%;
 	z-index: 10;
