--- a/src/widgets/WelcomeContent/style.module.scss
+++ b/src/widgets/WelcomeContent/style.module.scss
@@ -4,5 +4,5 @@
 	inset-block-start: 50%;
 	translate: -50% -50%;
 	padding: 40px 30px 20px 40px;
-	border: 3px dashed $accent-color;
+	border: 3px dashed var(--accent-color);
 }
