--- a/src/entities/Technology/style.module.scss
+++ b/src/entities/Technology/style.module.scss
@@ -13,20 +13,22 @@
 	display: flex;
 	align-items: flex-end;
 	justify-content: flex-start;
-	gap: 20px;
-	text-decoration: none;
+	gap: 10px;
 	user-select: none;
 	font-weight: 600;
-	font-size: 16px;
+	font-size: 14px;
 	img {
 		filter: grayscale(1);
 		object-position: center;
 		object-fit: contain;
-		max-width: 30px;
+		max-width: 20px;
 		aspect-ratio: 1/1;
 	}
 }
 
 .technologyLink {
 	cursor: pointer;
+	img {
+		max-width: 30px;
+	}
 }
