--- a/src/features/TechnologyList/style.module.scss
+++ b/src/features/TechnologyList/style.module.scss
@@ -1,4 +1,5 @@
 .technologyList {
+	list-style-type: none;
 	padding: 20px;
 	display: flex;
 }
@@ -8,8 +9,7 @@
 	color: var(--console-text);
 	background-color: var(--console-color);
 	border: 2px solid var(--console-text);
-	outline: 3px solid var(--console-color);;
-	box-shadow: 1px 1px 1px var(--accent-color);
+	outline: 3px solid var(--console-color);
 }
 .socialsList {
 	grid-area: socials;
@@ -20,6 +20,13 @@
 }
 .verticalOrientation {
 	flex-direction: column;
+}
+
+.title {
+	text-align: start;
+	font-size: 20px;
+	font-weight: 900;
+	border-block-end: 2px solid var(--console-text);
 }
 
 @keyframes appearance {
