feat: complete css part console component

--- a/src/entities/Button/style.module.scss
+++ b/src/entities/Button/style.module.scss
@@ -1,3 +1,4 @@
+@import '@shared/styles/animations.scss';
 $button-width: 150px;
 $button-height: 40px;
 
@@ -54,10 +55,4 @@ $button-height: 40px;
 	&:focus-visible {
 		outline: 5px solid black;
 	}
-}
-
-@keyframes flickering {
-	0%   { opacity:1; }
-	50%  { opacity:0; }
-	100% { opacity:1; }
 }
