fix: refactor dnd before change image preview

--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -15,8 +15,8 @@ $bg-color: #171717;
 	inset-block-start: 50%;
 	inset-inline-start: 50%;
 	z-index: 0;
-	width: 90%;
-	height: 90%;
+	width: var(--layout-width);
+	height: var(--layout-height);
 	background-image: url('@images/bg.webp');
 	background-repeat: no-repeat;
 	background-position: center;
