--- a/src/shared/styles/normalize.scss
+++ b/src/shared/styles/normalize.scss
@@ -357,3 +357,12 @@ p {
 	margin: 0;
 	padding: 0;
 }
+
+button {
+	padding: 0;
+	border: none;
+	background-color: rgba(255, 255, 255, 0);
+	&:focus {
+		outline: none;
+	}
+}
