feat fading about and skills

--- a/src/entities/TextContainer/styles.module.scss
+++ b/src/entities/TextContainer/styles.module.scss
@@ -4,6 +4,7 @@
 	background-color: var(--console-color);
 	border: 2px solid var(--console-text);
 	outline: 3px solid var(--console-color);
+	max-width: 500px;
 }
 .title {
 	margin: 0;
