--- a/src/entities/Button/style.module.scss
+++ b/src/entities/Button/style.module.scss
@@ -32,13 +32,6 @@ $disabled-color: #818181;
 		translate: 98% 0;
 		transition: translate 0s linear;
 	}
-	&:active {
-		&::before {
-			mix-blend-mode: soft-light;
-			transition: translate 0.6s linear;
-			translate: 0 0;
-		}
-	}
 	&:focus-visible {
 		outline: 5px solid black;
 	}
@@ -55,6 +48,13 @@ $disabled-color: #818181;
 			animation: flickering 0.8s infinite;
 		}
 	}
+	&:active {
+		&::before {
+			mix-blend-mode: soft-light;
+			transition: translate 0.6s linear;
+			translate: 0 0;
+		}
+	}
 }
 .error {
 	box-shadow: inset 0 0 6px 0 red;
@@ -68,6 +68,7 @@ $disabled-color: #818181;
 
 }
 .disabled {
+	cursor: default;
 	box-shadow: inset 0 0 6px 0 grey;
 	color: $disabled-color;
 	clip-path: polygon(0 0, 50% 0, 55% 10%, 48% 20%, 55% 30%, 45% 40%, 55% 50%, 45% 60%, 52% 70%, 40% 80%, 48% 90%, 45% 100%, 80% 100%, 75% 90%, 80% 80%, 70% 70%, 77% 60%, 65% 50%, 70% 40%, 60% 30%, 65% 20%, 60% 10%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
