--- a/src/widgets/WelcomeContent/style.module.scss
+++ b/src/widgets/WelcomeContent/style.module.scss
@@ -1,8 +1,7 @@
 .welcomeContent {
-	position: absolute;
-	inset-block-start: 50%;
-	inset-inline-start: 50%;
+	position: relative;
+	width: 520px;
+	height: 175px;
 	padding: 40px 30px 20px 40px;
 	border: 3px dashed var(--accent-color);
-	translate: -50% -50%;
 }
