--- a/src/entities/TextContainer/styles.module.scss
+++ b/src/entities/TextContainer/styles.module.scss
@@ -1,11 +1,12 @@
 .container {
+	max-width: 500px;
 	padding: 20px;
 	color: var(--console-text);
 	background-color: var(--console-color);
 	border: 2px solid var(--console-text);
 	outline: 3px solid var(--console-color);
-	max-width: 500px;
 }
+
 .title {
 	margin: 0;
 	font-weight: 900;
@@ -13,6 +14,9 @@
 	text-align: start;
 	border-block-end: 2px solid var(--console-text);
 }
+
 .content {
 	padding: 15px 15px 0;
+	font-weight: 500;
+	user-select: text;
 }
