--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -1,3 +1,5 @@
+@import '@shared/styles/animations';
+
 $bg-color: #171717;
 
 .main {
@@ -8,6 +10,7 @@ $bg-color: #171717;
 	height: 100dvh;
 	font-family: "OverpassMono", monospace;
 	background-color: $bg-color;
+	user-select: none;
 }
 
 .layout {
@@ -31,11 +34,11 @@ $bg-color: #171717;
 	display: grid;
 	grid-template-rows: 1fr minmax(max-content, 1fr) 1fr;
 	grid-template-columns: minmax(200px, 1fr) 2fr minmax(200px, 1fr);
-	gap: 10px;
 	grid-template-areas:
 			'top . .'
 			'. middle .'
 			'. . bottom';
+	gap: 10px;
 	width: 100%;
 	height: 100%;
 	padding: 6% 10%;
@@ -44,15 +47,17 @@ $bg-color: #171717;
 .gridTop {
 	grid-area: top;
 }
+
 .gridMiddle {
 	grid-area: middle;
 	justify-self: center;
 }
+
 .gridBottom {
 	grid-area: bottom;
-	gap: 50px;
 	justify-content: flex-end;
 	align-self: flex-end;
+	gap: 50px;
 }
 
 .stackPosition {
@@ -61,7 +66,7 @@ $bg-color: #171717;
 	inset-inline-start: 8%;
 	z-index: 10;
 	opacity: 0;
-	animation: fadeIn 3s ease 0s forwards;
+	animation: fade-in 1s ease 0s forwards;
 }
 
 .aboutPosition {
@@ -70,16 +75,5 @@ $bg-color: #171717;
 	inset-inline-start: 15%;
 	z-index: 15;
 	opacity: 0;
-	animation: fadeIn 2s ease 1.5s forwards;
-}
-
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-		transform: translateY(20px);
-	}
-	to {
-		opacity: 1;
-		transform: translateY(0);
-	}
+	animation: fade-in 1s ease 0.5s forwards;
 }
