--- a/src/shared/styles/animations.scss
+++ b/src/shared/styles/animations.scss
@@ -3,3 +3,15 @@
 	50%  { opacity:0; }
 	100% { opacity:1; }
 }
+
+@keyframes fade-in {
+	from {
+		transform: translateY(20px);
+		opacity: 0;
+	}
+
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
