--- a/src/widgets/ErrorBox/style.module.scss
+++ b/src/widgets/ErrorBox/style.module.scss
@@ -1,39 +1,42 @@
 $background-color: #F0F0F0;
 $box-border: 5px;
+
 .container {
 	position: absolute;
 	top: 400px;
 	left: 300px;
 	width: 500px;
 	height: 180px;
-
-	font-family: Segoe UI, Tahoma, sans-serif;
-	background: repeating-linear-gradient(45deg, rgba(25, 40, 55, 0.75) 35%, rgba(65, 85, 100, 0.75) 40%, rgba(65, 85, 100, 0.75) 42%, rgba(25, 40, 55, 0.75) 50%, rgba(25, 40, 55, 0.75) 55%, rgba(70, 85, 100, 0.75) 60%, rgba(70, 85, 100, 0.75) 75%, rgba(25, 40, 55, 0.75) 90%);;
-	border-radius: 6px;
-	backdrop-filter: blur(3px);
-	border: 1px solid rgba(2, 3, 4, 0.86);
 	padding: 30px $box-border $box-border;
-	box-shadow: inset 0 0 0 1px hsl(0deg 0% 61.56% / 92%), 0 7px 19px rgba(0, 0, 0, .9);
+	font-family: "Segoe UI", "Tahoma", sans-serif;
+	background: repeating-linear-gradient(45deg, rgb(25 40 55 / 75%) 35%, rgb(65 85 100 / 75%) 40%, rgb(65 85 100 / 75%) 42%, rgb(25 40 55 / 75%) 50%, rgb(25 40 55 / 75%) 55%, rgb(70 85 100 / 75%) 60%, rgb(70 85 100 / 75%) 75%, rgb(25 40 55 / 75%) 90%);
+	border: 1px solid rgb(2 3 4 / 86%);;
+	border-radius: 6px;
+	box-shadow: inset 0 0 0 1px hsl(0deg 0% 61.56% / 92%), 0 7px 19px rgb(0 0 0 / 90%);
+	backdrop-filter: blur(3px);
 }
+
 .content {
-	width: 100%;
-	height: 100%;
-	border-radius: 1px;
-	background-color: $background-color;
-	border: 1px solid rgba(24, 29, 31, 0.71);
-	box-shadow: 0 0 0 1px rgba(207, 210, 214, 0.71);
-	padding: 25px;
 	display: flex;
-	align-items: flex-end;
 	flex-direction: column;
 	justify-content: space-between;
+	align-items: flex-end;
+	width: 100%;
+	height: 100%;
+	padding: 25px;
+	background-color: $background-color;
+	border: 1px solid rgb(24 29 31 / 71%);
+	border-radius: 1px;
+	box-shadow: 0 0 0 1px rgb(207 210 214 / 71%);
 }
+
 .info {
 	display: flex;
-	gap: 20px;
 	justify-content: center;
 	align-items: center;
+	gap: 20px;
 }
+
 .image {
 	width: 40px;
 	aspect-ratio: 1/1;
@@ -43,45 +46,46 @@ $box-border: 5px;
 .errorText {
 	font-weight: 500;
 	font-size: 14px;
+
 	&::selection {
-		background-color: #3367D1;
 		color: white;
-	}
-	&::-moz-selection {
 		background-color: #3367D1;
-		color: white;
 	}
 }
 
 .okButton {
-	background: $background-color;
-	height: 27px;
 	min-width: 85px;
+	height: 27px;
 	padding: 5px 20px;
-	border: 1px solid black;
 	font-weight: 600;
 	font-size: 14px;
+	background: $background-color;
+	border: 1px solid black;
 	border-radius: 3px;
-	box-shadow: 0 0 2px 0 #000;
+	box-shadow: 0 0 2px 0 #000000;
+
 	&:hover {
 		background-color: #e3e2e2;
 	}
+
 	&:active {
 		background-color: #f1f1f1;
 	}
 }
+
 .closeButton {
 	position: absolute;
 	inset-block-start: 0;
 	inset-inline-end: $box-border;
 	width: 45px;
 	height: 20px;
-	font-size: 14px;
 	color: white;
-	background: linear-gradient(rgba(225, 168, 159, 0.91), rgba(195, 114, 104, 0.91) 50%, rgba(170, 52, 36, 0.91) 55%, rgba(187, 111, 94, 0.91));
+	font-size: 14px;
+	background: linear-gradient(rgb(225 168 159 / 91%), rgb(195 114 104 / 91%) 50%, rgb(170 52 36 / 91%) 55%, rgb(187 111 94 / 91%));
 	border-radius: 0 0 4px 4px;
-	box-shadow: inset 0 0 0 1px rgba(212, 216, 221, 0.8), 0 0 0 1px rgba(28, 32, 23, 0.8), 0 0 10px 1px rgb(220, 113, 86);
+	box-shadow: inset 0 0 0 1px rgb(212 216 221 / 80%), 0 0 0 1px rgb(28 32 23 / 80%), 0 0 10px 1px rgb(220 113 86);
+
 	&:hover, &:active {
-		box-shadow: inset 0 0 0 1px rgba(212, 216, 221, 0.8), 0 0 0 1px rgba(28, 32, 23, 0.8), 0 0 10px 5px rgb(220, 113, 86);
+		box-shadow: inset 0 0 0 1px rgb(212 216 221 / 80%), 0 0 0 1px rgb(28 32 23 / 80%), 0 0 10px 5px rgb(220 113 86);
 	}
 }
