--- a/src/widgets/ConsoleWindow/style.module.scss
+++ b/src/widgets/ConsoleWindow/style.module.scss
@@ -142,6 +142,7 @@ $panel-height: 25px;
 	margin: 0;
 	letter-spacing: -0.5px;
 	white-space: break-spaces;
+	user-select: text;
 
 	&::after {
 		content: '▋';
