--- a/src/entities/Button/style.module.scss
+++ b/src/entities/Button/style.module.scss
@@ -2,8 +2,6 @@
 
 $button-width: 150px;
 $button-height: 40px;
-$error-color: #800000;
-$disabled-color: #818181;
 
 .button {
 	position: relative;
@@ -18,20 +16,12 @@ $disabled-color: #818181;
 	padding: 0 15px;
 	overflow: hidden;
 	font-weight: 900;
-	background-color: var(--console-color);
-	border: none;
+	border-radius: 5px;
+	box-shadow: inset 3px -3px 0 2px rgb(41 41 41 / 60%), -3px 3px 16px 0 rgb(41 41 41 / 44%);
 	cursor: pointer;
 
 	&::after {
 		content: '⇒';
-	}
-
-	&::before {
-		content: '';
-		position: absolute;
-		inset: 0;
-		translate: 98% 0;
-		transition: translate 0s linear;
 	}
 
 	&:focus-visible {
@@ -40,61 +30,39 @@ $disabled-color: #818181;
 }
 
 .active {
-	color: var(--console-text);
-	clip-path: polygon(50% 0%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
-
-	&::before {
-		background: var(--console-text);
-	}
-
+	color: grey;
+	background: linear-gradient(180deg, #706884, #4F546B, #2E3B4D);
 	&:hover, &:active {
+		color: var(--color-glitch-blue);
+		text-shadow: 1px 1px var(--color-glitch-red);
+
 		&::after {
 			animation: flickering 0.8s infinite;
-		}
-	}
-
-	&:active {
-		&::before {
-			mix-blend-mode: soft-light;
-			transition: translate 0.6s linear;
-			translate: 0 0;
 		}
 	}
 }
 
 .error {
-	color: $error-color;
-	box-shadow: inset 0 0 6px 0 red;
-	transition: box-shadow 5s linear;
-	animation: error 5s infinite;
-	clip-path: polygon(0 0, 50% 0, 55% 10%, 48% 20%, 55% 30%, 45% 40%, 55% 50%, 45% 60%, 52% 70%, 40% 80%, 48% 90%, 45% 100%, 80% 100%, 75% 90%, 80% 80%, 70% 70%, 77% 60%, 65% 50%, 70% 40%, 60% 30%, 65% 20%, 60% 10%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
-
-	&::before {
-		background: $error-color;
-	}
-
+	color: var(--color-glitch-red);
+	text-shadow: 1px 1px 1px var(--color-glitch-red);
+	background: linear-gradient(to bottom, #524b5e, #3a3d4f, #252f3f);
+	clip-path: polygon(0 0, 50% 0, 55% 10%, 48% 20%, 55% 30%, 45% 40%, 55% 50%, 45% 60%, 52% 70%, 40% 80%, 48% 90%, 45% 100%, 80% 100%, 75% 90%, 80% 80%, 70% 70%, 77% 60%, 65% 50%, 70% 40%, 60% 30%, 65% 20%, 60% 10%, 100% 0, 100% 100%, 0 100%, 0 0);
+	animation: error 8s infinite;
 }
 
 .disabled {
-	color: $disabled-color;
-	box-shadow: inset 0 0 6px 0 grey;
+	color: grey;
+	background: linear-gradient(to bottom, #524b5e, #3a3d4f, #252f3f);
 	cursor: default;
 	filter: grayscale(1);
-	clip-path: polygon(0 0, 50% 0, 55% 10%, 48% 20%, 55% 30%, 45% 40%, 55% 50%, 45% 60%, 52% 70%, 40% 80%, 48% 90%, 45% 100%, 80% 100%, 75% 90%, 80% 80%, 70% 70%, 77% 60%, 65% 50%, 70% 40%, 60% 30%, 65% 20%, 60% 10%, 100% 0, 100% 100%, 10% 100%, 0 70%, 0 0);
-
-	&::before {
-		background: $disabled-color;
-	}
+	clip-path: polygon(0 0, 50% 0, 55% 10%, 48% 20%, 55% 30%, 45% 40%, 55% 50%, 45% 60%, 52% 70%, 40% 80%, 48% 90%, 45% 100%, 80% 100%, 75% 90%, 80% 80%, 70% 70%, 77% 60%, 65% 50%, 70% 40%, 60% 30%, 65% 20%, 60% 10%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 @keyframes error {
-	0%, 5%, 50%, 99% {
-		color: #a90000;
-		text-shadow: 0 0 2px #a90000;
+	10%, 13%, 50%, 88% {
+		color: var(--color-glitch-red);
 	}
-
-	2%, 6%, 51%, 100% {
-		color: $error-color;
-		text-shadow: 0 0 0 #a90000;
+	11%, 14%, 51%, 89% {
+		color: #ca0e0e;
 	}
 }
