--- a/src/widgets/Label/style.module.scss
+++ b/src/widgets/Label/style.module.scss
@@ -1,10 +1,7 @@
-$label-offset-x: 15px;
-$label-offset-y: 15px;
-
 .labelContainer {
 	position: absolute;
-	inset-block-start: calc((100% - var(--layout-height)) / 2 + $label-offset-y);
-	inset-inline-end: calc((100% - var(--layout-height)) / 2 + $label-offset-x);
+	inset-block-start: calc(var(--layout-offset) + var(--label-offset));
+	inset-inline-end: calc(var(--layout-offset) + var(--label-offset));
 	z-index: 100;
 	display: flex;
 	flex-direction: column;
