--- a/src/entities/GlitchText/style.module.scss
+++ b/src/entities/GlitchText/style.module.scss
@@ -1,6 +1,6 @@
 .glitchText {
 	position: relative;
-	color: #cccccc;
+	color: var(--accent-color);
 	font-weight: 700;
 	font-size: 60px;
 	font-family: "OverpassMono", monospace;
