--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -1,7 +1,5 @@
 @import '@shared/styles/animations';
 
-$bg-color: #171717;
-
 .main {
 	display: flex;
 	justify-content: center;
@@ -9,7 +7,7 @@ $bg-color: #171717;
 	width: 100dvw;
 	height: 100dvh;
 	font-family: "OverpassMono", monospace;
-	background-color: $bg-color;
+	background-color: var(--bg-main);
 	user-select: none;
 }
 
@@ -31,32 +29,23 @@ $bg-color: #171717;
 
 .content {
 	z-index: 10;
-	display: grid;
-	grid-template-rows: 1fr minmax(max-content, 1fr) 1fr;
-	grid-template-columns: minmax(200px, 1fr) 2fr minmax(200px, 1fr);
-	grid-template-areas:
-			'top . .'
-			'. middle .'
-			'. . bottom';
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 	height: 100%;
-	padding: calc(var(--layout-offset)) calc(var(--layout-offset) * 2);
 }
 
-.gridTop {
-	grid-area: top;
+.labelPosition {
+	position: absolute;
+	inset-block-start: calc(var(--layout-offset-y) + var(--label-offset));
+	inset-inline-end: calc(var(--layout-offset-x) + var(--label-offset));
 }
 
-.gridMiddle {
-	grid-area: middle;
-	justify-self: center;
-}
-
-.gridBottom {
-	grid-area: bottom;
-	justify-content: flex-end;
-	align-self: flex-end;
-	gap: 50px;
+.socialsPosition {
+	position: absolute;
+	inset-block-end: calc(var(--layout-offset-y) + var(--social-offset));
+	inset-inline-end: calc(var(--layout-offset-x) + var(--social-offset));
 }
 
 .stackPosition {
