--- a/src/pages/Mobile/style.module.scss
+++ b/src/pages/Mobile/style.module.scss
@@ -8,6 +8,7 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
+	background-color: var(--bg-main);
 	padding: 20px;
 	width: 100dvw;
 	height: 100dvh;
