--- a/src/widgets/ConsoleWindow/style.module.scss
+++ b/src/widgets/ConsoleWindow/style.module.scss
@@ -8,15 +8,13 @@ $panel-height: 25px;
 
 .container {
 	position: absolute;
-	inset-block-start: calc(var(--layout-offset) + var(--label-offset) + 80px);
-	inset-inline-end: calc(var(--layout-offset) - 2%);
+	inset-block-start: calc(var(--layout-offset-y) + var(--label-offset-y) + 80px);
+	inset-inline-end: calc(var(--layout-offset-x) - 2%);
 	z-index: 100;
 	width: 700px;
 	height: 350px;
 	color: var(--console-text);
 	background-color: var(--console-color);
-	border: 2px solid var(--console-text);
-	outline: 3px solid var(--console-color);
 	font-family: var(--console-font-family);
 	font-weight: 700;
 }
@@ -27,8 +25,7 @@ $panel-height: 25px;
 	align-items: center;
 	height: $panel-height;
 	padding: 0 10px;
-	background-color: var(--console-color);
-	border-block-end: 2px solid var(--console-text);
+	background-color: var(--console-color-darken);
 	user-select: none;
 }
 
@@ -38,6 +35,7 @@ $panel-height: 25px;
 	font-size: 15px;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+	color: var(--accent-color);
 }
 
 .panelTools {
