fix: refactor code, remove mock data

--- a/src/pages/Mobile/style.module.scss
+++ b/src/pages/Mobile/style.module.scss
@@ -38,6 +38,7 @@
 	@media (max-width: 600px) {
 		position: initial;
 		flex-direction: row;
+		justify-content: center;
 		margin: 15px 0;
 		width: 100%;
 		padding: 10px 0;
